[package]
name = "neopanamax"
version = "1.0.5"
authors = ["k3d3 <k@3d3.ca>"]
description = "Mirror rustup and crates.io repositories, for offline Rust and Cargo usage."
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/panamax-rs/panamax"
repository = "https://github.com/panamax-rs/panamax"
edition = "2018"

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking"] }
indicatif = "0.17.0-rc.1"
structopt = "0.3.26"
toml = "0.5.8"
serde = { version = "1.0.134", features = ["derive"] }
console = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
sha2 = "0.10.1"
url = "2.2.2"
glob = "0.3.0"
git2 = "0.13.25"
serde_json = "1.0.75"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
warp = { version = "0.3.2", features = ["tls"] }
askama = "0.11.0"
askama_warp = "0.12.0"
include_dir = "0.7.2"
bytes = "1.1.0"
tokio-stream = "0.1.8"
tokio-util = "0.6.9"
futures-util = "0.3.19"
futures = "0.3.19"

[features]
default = []

# For development purposes, reduce the crate download count
# and only download crates that start with z
dev_reduced_crates = []
